"ChangeLog"

2005-07-16	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-48-connect-01-31:
	  Bug fixes in progress.
	  Instrumented code with more stacktracing.  
		BUG FIX: proper copy-constructor for subinstance_manager.
		BUG FIX: fixed bounds check in subinstance_manager::
			lookup_port_instance().
	  instance_collection::instantiate_indices():
		Create empty first, then manually instantiate (recursive).
	  Added a few new test cases to process/ and connect/.
	  TODO: address bug exhibited by process/057.in


2005-07-15	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-48-connect-01-30:
	  Implemented (untested) member instance reference unrolling.  
		Much if it is currently wrapped in #if ENABLE_MEMBER_UNROLLING.
		Commit after further testing.  
		Factored out common code in instance_reference and 
		member_instance_reference method definitions.
		Also added simple_meta_instance_reference_implementation<bool>
		policy class.  
	  Added Object/ref directory, the future home of all 
		instance- and value-reference classes and code.  
	  Implemented definition_base (and kids)::lookup_port_formal_position.
	  TODO: tons of testing...


2005-07-14	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-48-connect-01-29-merged-subinstance-09:
	  Merged revisions from -subinstance (-09) branch.
		Summary: implemented recursive instantiation of
		subinstance, public ports of structured types, 
		adding substructure to select instance alias types.  
		Implemented more type-checking for channels, 
		and checking between connections and collections.  
		Also include one critical bug fix in the util library.
		Includes notes about some resolutions.
		Files moved around for re-organization.  
	  TODO: back to the original goal:
		member instance reference resolution and connection, and ports.  

2005-07-14	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-48-connect-01-28-subinstance-09: