@@ -1,0 +1,116 @@
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	32
+	3	##ADDR##	procdefn	0	#HEAD#	#TAIL#	60
+	4	##ADDR##	dboolcol	2	#HEAD#	#TAIL#	29
+	5	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
+	6	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	7	##ADDR##	datadefn	0	#HEAD#	#TAIL#	53
+	8	##ADDR##	crnglst_	0	#HEAD#	#TAIL#	28
+	9	##ADDR##	procdefn	0	#HEAD#	#TAIL#	60
+	10	##ADDR##	proccoll	2	#HEAD#	#TAIL#	33
+	11	##ADDR##	procinst	0	#HEAD#	#TAIL#	24
+	12	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	13	##ADDR##	crnglst_	0	#HEAD#	#TAIL#	28
+	14	##ADDR##	proccoll	0	#HEAD#	#TAIL#	52
+	15	##ADDR##	procinst	0	#HEAD#	#TAIL#	24
+	16	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	17	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	18	##ADDR##	proccoll	2	#HEAD#	#TAIL#	149
+	19	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	20	##ADDR##	dboolcol	2	#HEAD#	#TAIL#	97
+	21	##ADDR##	dboolcol	2	#HEAD#	#TAIL#	97
+	22	##ADDR##	dboolcol	2	#HEAD#	#TAIL#	97
+	23	##ADDR##	dboolcol	2	#HEAD#	#TAIL#	97
+
+In module created from: ##FILE## (unrolled)
+In namespace "", we have: {
+  0 parameter-collections
+  1 instantiation-collections
+  0 sub-namespaces
+  2 definitions
+  0 typedefs
+  Definitions:
+    bar = process-definition (defined) bar(
+        foo<> x with indices: {
+          [0..1][0..1]
+        }
+
+      )
+      In definition "bar", we have: {
+        x = foo<> x with indices: {
+          [0..1][0..1]
+        }
+
+      }
+
+    foo = process-definition (defined) foo(
+        bool<> a with indices: {
+          [0..1][0..1]
+        }
+
+      )
+      In definition "foo", we have: {
+        a = bool<> a with indices: {
+          [0..1][0..1]
+        }
+
+      }
+
+  Instances:
+    poo = process bar<>^0 poo (instantiated) = ::poo (
+      process foo<>^2 x with indices: {
+        [0..1][0..1]
+      }
+        unrolled indices: {
+          [0][0] = ::poo.x[0][0] (
+            bool^2 a with indices: {
+              [0..1][0..1]
+            }
+              unrolled indices: {
+                [0][0] = ::poo.x[0][0].a[0][0] 
+                [0][1] = ::poo.x[0][0].a[0][1] 
+                [1][0] = ::poo.x[0][0].a[1][0] 
+                [1][1] = ::poo.x[0][0].a[1][1] 
+              }
+          )
+          [0][1] = ::poo.x[0][1] (
+            bool^2 a with indices: {
+              [0..1][0..1]
+            }
+              unrolled indices: {
+                [0][0] = ::poo.x[0][1].a[0][0] 
+                [0][1] = ::poo.x[0][1].a[0][1] 
+                [1][0] = ::poo.x[0][1].a[1][0] 
+                [1][1] = ::poo.x[0][1].a[1][1] 
+              }
+          )
+          [1][0] = ::poo.x[1][0] (
+            bool^2 a with indices: {
+              [0..1][0..1]
+            }
+              unrolled indices: {
+                [0][0] = ::poo.x[1][0].a[0][0] 
+                [0][1] = ::poo.x[1][0].a[0][1] 
+                [1][0] = ::poo.x[1][0].a[1][0] 
+                [1][1] = ::poo.x[1][0].a[1][1] 
+              }
+          )
+          [1][1] = ::poo.x[1][1] (
+            bool^2 a with indices: {
+              [0..1][0..1]
+            }
+              unrolled indices: {
+                [0][0] = ::poo.x[1][1].a[0][0] 
+                [0][1] = ::poo.x[1][1].a[0][1] 
+                [1][0] = ::poo.x[1][1].a[1][0] 
+                [1][1] = ::poo.x[1][1].a[1][1] 
+              }
+          )
+        }
+    )
+}
+
